[Feat kbss-cvut/termit-ui#713] Implement advanced search combining full-text search with faceted filtering