@@ -3,7 +3,7 @@ package cz.cvut.kbss.termit.persistence.dao;
 import cz.cvut.kbss.jopa.model.EntityManager;
 import cz.cvut.kbss.jopa.model.MultilingualString;
 import cz.cvut.kbss.jopa.vocabulary.SKOS;
-import cz.cvut.kbss.termit.dto.search.FacetedSearchResult;
+import cz.cvut.kbss.termit.dto.search.FullTextSearchResult;
 import cz.cvut.kbss.termit.dto.search.MatchType;
 import cz.cvut.kbss.termit.dto.search.SearchParam;
 import cz.cvut.kbss.termit.environment.Environment;
@@ -27,19 +27,14 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
-
 import static cz.cvut.kbss.termit.environment.Environment.setPrimaryLabel;
 import static cz.cvut.kbss.termit.environment.util.ContainsSameEntities.containsSameEntities;
 import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.anyOf;
-import static org.hamcrest.Matchers.hasItem;
 import static org.hamcrest.Matchers.not;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 
-public class SearchDaoFacetedSearchTest extends BaseDaoTestRunner {
+class SearchDaoAdvancedSearchTest extends BaseDaoTestRunner {
     private static final String[] TYPES = {"http://onto.fel.cvut.cz/ontologies/ufo/event",
                                            "http://onto.fel.cvut.cz/ontologies/ufo/object",
                                            "http://onto.fel.cvut.cz/ontologies/ufo/relator"};
@@ -49,7 +44,6 @@ public class SearchDaoFacetedSearchTest extends BaseDaoTestRunner {
 
     private static Vocabulary vocabulary;
     private static List<Term> terms;
-    private static List<Vocabulary> vocabularies;
 
     @Autowired
     private EntityManager em;
@@ -74,122 +68,111 @@ public class SearchDaoFacetedSearchTest extends BaseDaoTestRunner {
                 em.persist(vocabulary, descriptorFactory.vocabularyDescriptor(vocabulary));
                 terms = generateTerms();
                 terms.forEach(t -> em.persist(t, descriptorFactory.termDescriptor(t)));
-                vocabularies = generateVocabularies();
-                vocabularies.forEach(v -> em.persist(v, descriptorFactory.vocabularyDescriptor(v)));
             });
             initialized = true;
         }
         Environment.setCurrentUser(user);
     }
 
-
     private List<Term> generateTerms() {
-        final List<Term> terms = new ArrayList<>(10);
+        final List<Term> newTerms = new ArrayList<>(10);
         for (int i = 0; i < Generator.randomInt(5, 10); i++) {
-            final boolean b = Generator.randomBoolean();
+            final boolean randomBool = Generator.randomBoolean();
             final Term term = new Term();
             term.setUri(Generator.generateUri());
-            setPrimaryLabel(term, b ? "Matching label " + i : "Unknown label " + i);
+            setPrimaryLabel(term, randomBool ? "Matching label " + i : "Unknown label " + i);
             vocabulary.getGlossary().addRootTerm(term);
             term.setVocabulary(vocabulary.getUri());
-            if (b) {
+            if (randomBool) {
                 term.setState(Generator.generateUri());
             }
             term.addType(TYPES[Generator.randomIndex(TYPES)]);
             term.setNotations(Set.of(String.valueOf(
                     Constants.LETTERS.charAt(Generator.randomInt(0, Constants.LETTERS.length())))));
-            term.setExamples(Set.of(MultilingualString.create(b ? "Matching" : "Unknown" + " example " + i,
+            term.setExamples(Set.of(MultilingualString.create(randomBool ? "Matching" : "Unknown" + " example " + i,
                                                               Environment.LANGUAGE)));
             term.setProperties(Map.of(INTEGER_PROPERTY, Set.of(i)));
-            terms.add(term);
+            newTerms.add(term);
         }
-        terms.sort(Comparator.comparing(Environment::getPrimaryLabel));
-        return terms;
-    }
-
-    private List<Vocabulary> generateVocabularies() {
-        final List<Vocabulary> vocabularies = IntStream.range(0, 10).mapToObj(i -> Generator.generateVocabulary())
-                                                       .collect(Collectors.toList());
-        vocabularies.forEach(v -> {
-            v.setUri(Generator.generateUri());
-            if (Generator.randomBoolean()) {
-                setPrimaryLabel(v, "Matching label " + Generator.randomInt());
-            }
-        });
-        return vocabularies;
+        newTerms.sort(Comparator.comparing(Environment::getPrimaryLabel));
+        return newTerms;
     }
 
 
     @Test
-    void facetedTermSearchReturnsTermsMatchingIriSearchParamWithSpecifiedTypes() {
+    void advancedSearchReturnsTermsMatchingIriSearchParamWithSpecifiedTypes() {
         final SearchParam param = new SearchParam(URI.create(RDF.TYPE.stringValue()), Set.of(TYPES[0], TYPES[1]),
                                                   MatchType.IRI);
-        final List<FacetedSearchResult> result = sut.facetedTermSearch(Set.of(param), Constants.DEFAULT_PAGE_SPEC);
+        final List<FullTextSearchResult> result = sut.advancedSearch("", null, Set.of(param), Constants.DEFAULT_PAGE_SPEC);
         assertFalse(result.isEmpty());
-        result.forEach(r -> assertThat(r.getTypes(), anyOf(hasItem(TYPES[0]), hasItem(TYPES[1]))));
+        final List<Term> expectedTerms = terms.stream()
+                                              .filter(t -> t.hasType(TYPES[0]) || t.hasType(TYPES[1]))
+                                              .toList();
+        assertThat(result, containsSameEntities(expectedTerms));
     }
 
     @Test
-    void facetedTermSearchReturnsTermsMatchingExactMatchSearchParamWithSpecifiedValue() {
+    void advancedSearchReturnsTermsMatchingExactMatchSearchParamWithSpecifiedValue() {
         final SearchParam param = new SearchParam(URI.create(SKOS.NOTATION),
                                                   Set.of(terms.get(0).getNotations().iterator().next()),
                                                   MatchType.EXACT_MATCH);
         final List<Term> matchingTerms = terms.stream()
                                               .filter(t -> !Collections.disjoint(t.getNotations(), param.getValue()))
-                                              .collect(Collectors.toList());
-        final List<FacetedSearchResult> result = sut.facetedTermSearch(Set.of(param), Constants.DEFAULT_PAGE_SPEC);
+                                              .toList();
+        final List<FullTextSearchResult> result = sut.advancedSearch("", null, Set.of(param), Constants.DEFAULT_PAGE_SPEC);
         assertFalse(result.isEmpty());
         assertThat(result, containsSameEntities(matchingTerms));
     }
 
     @Test
-    void facetedTermSearchReturnsTermsMatchingSubstringSearchParamWithSpecifiedValue() {
+    void advancedSearchReturnsTermsMatchingSubstringSearchParamWithSpecifiedValue() {
         final Term sample = Generator.randomElement(terms);
         final String sampleValue = sample.getExamples().iterator().next().get().substring(0, 4);
         final SearchParam param = new SearchParam(URI.create(SKOS.EXAMPLE),
                                                   Set.of(sampleValue),
                                                   MatchType.SUBSTRING);
-        final List<Term> matchingTerms = terms.stream().filter(t -> t.getExamples().iterator().next().get()
-                                                                     .startsWith(sampleValue))
-                                              .collect(Collectors.toList());
-        final List<FacetedSearchResult> result = sut.facetedTermSearch(Set.of(param), Constants.DEFAULT_PAGE_SPEC);
+        final List<Term> matchingTerms = terms.stream()
+                                              .filter(t -> t.getExamples().iterator().next().get()
+                                              .startsWith(sampleValue))
+                                              .toList();
+        final List<FullTextSearchResult> result = sut.advancedSearch("", null, Set.of(param), Constants.DEFAULT_PAGE_SPEC);
         assertFalse(result.isEmpty());
         assertThat(result, containsSameEntities(matchingTerms));
     }
 
     @Test
-    void facetedTermSearchReturnsResultsMatchingMultipleSearchParameters() {
+    void advancedSearchReturnsResultsMatchingMultipleSearchParameters() {
         final SearchParam typeParam = new SearchParam(URI.create(RDF.TYPE.stringValue()), Set.of(TYPES[0], TYPES[1]),
                                                       MatchType.IRI);
         final SearchParam substringParam = new SearchParam(URI.create(SKOS.EXAMPLE),
                                                            Set.of("matching"),
                                                            MatchType.SUBSTRING);
-        final List<Term> matchingTerms = terms.stream().filter(t -> t.getExamples().iterator().next().get()
-                                                                     .startsWith("Matching") && (t.hasType(
-                                                      TYPES[0]) || t.hasType(TYPES[1])))
-                                              .collect(Collectors.toList());
-        final List<FacetedSearchResult> result = sut.facetedTermSearch(Set.of(typeParam, substringParam),
-                                                                       Constants.DEFAULT_PAGE_SPEC);
+        final List<Term> matchingTerms = terms.stream()
+                                              .filter(t -> t.getExamples().iterator().next().get()
+                                              .startsWith("Matching") && (t.hasType(TYPES[0]) || t.hasType(TYPES[1])))
+                                              .toList();
+        final List<FullTextSearchResult> result = sut.advancedSearch("", null, Set.of(typeParam, substringParam),
+                                                                     Constants.DEFAULT_PAGE_SPEC);
         assertThat(result, containsSameEntities(matchingTerms));
     }
 
     @Test
-    void facetedTermSearchReturnsMatchingPage() {
+    void advancedSearchReturnsMatchingPage() {
         final Pageable pageOne = PageRequest.of(0, terms.size() / 2);
         final Pageable pageTwo = PageRequest.of(1, terms.size() / 2);
         final SearchParam searchParam = new SearchParam(
                 URI.create(cz.cvut.kbss.termit.util.Vocabulary.s_p_je_pojmem_ze_slovniku),
                 Set.of(vocabulary.getUri().toString()), MatchType.IRI);
 
-        final List<FacetedSearchResult> resultOne = sut.facetedTermSearch(Set.of(searchParam), pageOne);
+        final List<FullTextSearchResult> resultOne = sut.advancedSearch("", null, Set.of(searchParam), pageOne);
         assertEquals(terms.size() / 2, resultOne.size());
-        final List<FacetedSearchResult> resultTwo = sut.facetedTermSearch(Set.of(searchParam), pageTwo);
+        final List<FullTextSearchResult> resultTwo = sut.advancedSearch("", null, Set.of(searchParam), pageTwo);
         assertEquals(terms.size() / 2, resultTwo.size());
         assertThat(resultOne, not(containsSameEntities(resultTwo)));
     }
 
     @Test
-    void facetedTermSearchHandlesCorrectlyDatatypesForExactMatch() {
+    void advancedSearchHandlesCorrectlyDatatypesForExactMatch() {
         final Term expected = Generator.randomElement(terms);
         final Integer paramValue = (Integer) expected.getProperties().get(INTEGER_PROPERTY).iterator().next();
 
@@ -197,9 +180,15 @@ public class SearchDaoFacetedSearchTest extends BaseDaoTestRunner {
                 URI.create(INTEGER_PROPERTY), Set.of(paramValue), MatchType.EXACT_MATCH
         );
 
-        final List<FacetedSearchResult> result = sut.facetedTermSearch(Set.of(searchParam),
-                                                                       Constants.DEFAULT_PAGE_SPEC);
+        final List<FullTextSearchResult> result = sut.advancedSearch("", null, Set.of(searchParam),
+                                                                     Constants.DEFAULT_PAGE_SPEC);
         assertEquals(1, result.size());
         assertEquals(expected.getUri(), result.get(0).getUri());
+    }
+
+    @Test
+    void advancedSearchReturnsEmptyListWhenSearchStringIsBlankAndNoSearchParams() {
+        final List<FullTextSearchResult> result = sut.advancedSearch("", null, Set.of(), Constants.DEFAULT_PAGE_SPEC);
+        assertEquals(Collections.emptyList(), result);
     }
 }
